--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
   <div class="location">
     <h1 class="location-timezone">Timezone</h1>
     <p>Icon</p>
+    <h1 class='location-name'></h1>
   </div>    
   <div class="temperature">
     <div class="degree-section">
       <h2 class="temperature-degree">Loading temperature...</h2>
       <span>F</span>
     </div>
+    <div class="temperature-feels_like"></div>
+    <div class="temp-max"></div>
+    <div class="temp-min"></div>
+    <div class="humidity"></div>
+    <div class="pressure"></div>
     <div class="temperature-description">Loading description...</div>
   </div>
 
