--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div class="location">
     <h1 class="location-timezone">Timezone</h1>
-    <p>Icon</p>
+    <img id='location-icon'>
     <h1 class='location-name'></h1>
   </div>    
   <div class="temperature">
