--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <h1 class="location-timezone">Timezone</h1>
     <img id='location-icon'>
     <h1 class='location-name'></h1>
+    <h2 class="location-country"></h2>
+    <h3 class="location-sunrise"></h3>
+    <h3 class="location-sunset"></h3>
+    <h3 class="wind-speed"></h3>
+    <h3 class="wind-deg"></h3>
   </div>    
   <div class="temperature">
     <div class="degree-section">
