--- a/index.html
+++ b/index.html
@@ -16,27 +16,25 @@
       <h2 class="location-country"></h2>
     </section>
     <section class="location-subheader">
-      <h1 class="temperature-description">Loading description...</h1>
-      <h3 class="location-sunrise"></h3>
-      <h3 class="location-sunset"></h3>
-      <h3 class="wind-speed"></h3>
-      <h3 class="wind-deg"></h3>
+      <h1 class="temperature-description"></h1>
+      <div>Sunrise: <span class="location-sunrise"></span></div>
+      <div>Sunset: <span class="location-sunset"></span></div>
+      <div>Wind speed: <span class="wind-speed"></span> mph</div>
+      <div>Wind degrees: <span class="wind-deg"></span>°</div>
     </section>
   </div> 
 
   <div class="temperature">
     <div class="degree-section">
-      <h2 class="temperature-degree">Loading temperature...</h2>
+      <h2 class="temperature-degree"></h2>
       <span>F</span>
     </div>
     <div>Feels Like: <span class="temperature-feels_like"></span> F</div>
     <div>Max Temp: <span class="temp-max"></span> F</div>
     <div>Min Temp: <span class="temp-min"></span> F</div>
-    <div>Humidity: <span class="humidity"></span></div>
+    <div>Humidity: <span class="humidity"></span>%</div>
     <div>Pressure <span class="pressure"></span></div>
-   
-    <div class="humidity"></div>
-    <div class="pressure"></div>
+
   </div>
 
   <script src='app.js'></script>
